# lafleur

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  MANIFEST.in  MUTATOR_TEST_PLAN.md  README.md  pyproject.toml
.claude/: session_handoff.md
.claude/agents/mutator-reviewer/: SKILL.md
.github/workflows/: main.yml
doc/dev/: 00_index.md  01_architecture_overview.md  02_the_evolutionary_loop.md  03_coverage_and_feedback.md  04_mutation_engine.md  05_state_and_data_formats.md  06_developer_getting_started.md  07_extending_lafleur.md  08_testing_lafleur.md  09_diagnostic_mode.md  10_glossary.md  11_seeding.md
docs/: TOOLING.md
lafleur/: analysis.py  artifacts.py  bump_version.py  campaign.py  corpus_analysis.py  corpus_manager.py  coverage.py  driver.py  execution.py  health.py  jit_bug_patterns.py  jit_seeds.py  jit_tuner.py  known_issues.json  learning.py  lineage.py  metadata.py  minimize.py  mutation_controller.py  mutator.py  orchestrator.py  registry.py  report.py  scoring.py  state_tool.py  triage.py  types.py  uop_names.py  utils.py
lafleur/mutators/: __init__.py  engine.py  generic.py  helper_injection.py  scenarios_control.py  scenarios_data.py  scenarios_runtime.py  scenarios_types.py  sniper.py  utils.py
scripts/: analyze_cold_streaks.py  analyze_uop_coverage.py
tests/: test_analysis.py  test_bloom.py  test_bloom_integration.py  test_campaign.py  test_cli_entry_points.py  test_corpus_analysis.py  test_corpus_manager.py  test_coverage.py  test_driver.py  test_driver_internals.py  test_driver_jit.py  test_driver_recursive.py  test_driver_vitals.py  test_health.py  test_jit_seeds.py  test_jit_tuner.py  test_learning.py  test_lineage.py  test_metadata.py  test_minimize.py  test_mutator.py  test_registry.py  test_report.py  test_state_tool.py  test_triage.py  test_triage_display.py  test_triage_interactive.py  test_utils_core.py
tests/mutators/: README.md  __init__.py  test_engine.py  test_generic.py  test_helper_injection.py  test_scenarios_control.py  test_scenarios_data.py  test_scenarios_runtime.py  test_scenarios_types.py  test_sniper.py  test_utils.py
tests/orchestrator/: test_coverage.py  test_crash_detection.py  test_diagnostic_mode.py  test_execution.py  test_integration.py  test_jit_clamping.py  test_jit_differential.py  test_jit_parsing.py  test_jit_scoring.py  test_main_loop.py  test_mutation_strategies.py  test_scoring.py  test_scoring_manager.py  test_sniper_targeting.py  test_telemetry.py
(+2 files in other folders)
