[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lafleur"
version = "0.0.1"
authors = [
  {name="Daniel Diniz"},
]
description = "A feedback-driven JIT fuzzer for CPython."
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-2.0-only" # Use the standard SPDX identifier
license-files = ["LICEN[CS]E.*"]
keywords = ["fuzzing", "fuzzer", "cpython", "jit", "ast"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    'Intended Audience :: Developers',
    'Environment :: Console',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Operating System :: OS Independent',
    'Natural Language :: English',
]

[project.urls]
Homepage = "https://github.com/devdanzin/lafleur"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/devdanzin/lafleur.git"
Issues = "https://github.com/devdanzin/lafleur/issues"
Changelog = "https://github.com/devdanzin/lafleur/blob/main/CHANGELOG.md"

[project.scripts]
lafleur = "lafleur.orchestrator:main"
lafleur-jit-tweak = "lafleur.jit_tuner:main"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "venv",
]

line-length = 100
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# TODO: select codes that make sense for lafleur
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
